fixed overlap issue

--- a/css/sustainapp.css
+++ b/css/sustainapp.css
@@ -14,6 +14,18 @@ div.topbanner
 	margin-bottom:25px;
 }
 
+div.searchcol
+{	padding-bottom:30px;
+}
+
+.bcimg
+{	height:38px;
+}
+
+*.srslyfit
+{	max-width:100%;
+}
+	
 /*	***** COLORS *****
 	Blue: #1E92D0
 	Red: #E42225
